<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PRBMM - Prbm Mobile</string>
    <string name="app_name_short">PRBMM</string>
    <string name="app_name_description">Percorso Rettificato Belga Multimediale Mobile</string>
    <string name="welcome">Benvenuto!</string>
    <string name="title_activity_main">PRBMM - Prbm Mobile</string>
    <string name="new_prbm">Nuovo PRBM</string>
    <string name="edit_prbm">Modifica PRBM</string>
    <string name="list_prbm">Elenco PRBM</string>
    <string name="note">Note</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="procedi">Procedi</string>
    <string name="abort">Annulla</string>
    <string name="proceed">Avanti</string>
    <string name="add">Aggiungi</string>
    <string name="save">Salva</string>
    <string name="sync">Sincronizza</string>
    <string name="web">PRBMM Web</string>
    <string name="ok">OK</string>
    <string name="articolo_inserito_manualmente">Articolo inserito manualmente</string>
    <string name="visualizza">Visualizza</string>
    <string name="edit">Modifica</string>
    <string name="cancella">Cancella</string>
    <string name="fields_incomplete">Campi incompleti!</string>

    <string name="back">Indietro</string>
    <string name="continue_">Continua</string>
    <string name="insert">Inserisci</string>
    <string name="confirmation">Vuoi uscire?</string>
    <string name="are_you_sure">Se annulli perderai le modifiche non salvate, sei sicuro?</string>
    <string name="no_empty">Il campo di testo della descrizione non può essere vuoto</string>
    <string name="parse_error">Hai inserito dei caratteri invalidi</string>

    <string name="background_splash_image">Background splash image</string>
    <string name="main_splash_image">Main splash image</string>
    <string name="about">About</string>
    <string name="about_text">PRBMM è un\'applicazione sviluppata da Nicola Corti per BitPrepared (http://www.bitprepared.it/). Questa applicazione è open source, puoi trovare il codice sorgente su GitHub</string>
    <string name="contact">Contattaci</string>
    <string name="sendmail">Invia mail</string>
    <string name="close">Chiudi</string>
    <string name="rate">Valuta</string>
    <string name="create_new_prbm">Nuovo PRBM</string>
    <string name="choose_place">Seleziona il luogo del percorso</string>
    <string name="insert_data_description">Inserisci i dati del nuovo percorso rettificato</string>
    <string name="title">Titolo</string>
    <string name="title_hint">Inserisci il titolo del percorso rettificato.</string>
    <string name="authors">Autori</string>
    <string name="authors_hint">Inserisci l\'elenco degli autori</string>
    <string name="place">Località</string>
    <string name="place_hint">Inserisci il nome della località relativa al percorso rettificato</string>
    <string name="date">Data e ora</string>
    <string name="date_hint">Inserisci la data e ora del percorso rettificato</string>
    <string name="note_hint">Inserisci eventuali note sul percorso rettificato</string>
    <string name="title_create_prbm_activity">Creazione nuovo PRBM</string>
    <string name="error_no_title_prbm">Per poter continuare è necessario inserire almeno il titolo del percorso rettificato</string>
    <string name="app_description">PRBMM - Percorso Rettificato Belga Multimediale Mobile</string>
    <string name="prbm_date">Data percorso</string>
    <string name="prbm_time">Orario percorso</string>
    <string name="minutes">"%1$d min"</string>
    <string name="meters">"%1$.1f m"</string>
    <string name="azimut">"%1$.1f °"</string>
    <string name="you_cant_delete_last_unit">Non puoi cancellare l\'ultima riga dal percorso rettificato</string>
    <string name="choose_entity">Scegli il tipo di osservazione da aggiungere</string>
    <string name="entity_details">Dettagli osservazione</string>
    <string name="exit">Esci</string>
    <string name="delete">Elimina</string>
    <string name="prbm_icon">Icona PRBM</string>
    <string name="list_of_prbms">Elenco dei PRBM</string>
    <string name="parameters">Parametri</string>
    <string name="modify">Modifica</string>
    <string name="you_must_insert_caption">Devi inserire almeno la didascalia del\'elemento per poterlo salvare</string>
    <string name="modify_prbm_parameters">Modifica i parametri del PRBM</string>
    <string name="no_prbm_to_show">Nessun PRBM da mostrare.</string>
    <string name="prbm_operations">Operazioni PRBM</string>
    <string name="delete_prbm">Elimina PRBM</string>
    <string name="are_you_sure_to_delete_prbm">Sei proprio sicuro di voler eliminare il PRBM? Questa cancellazione sarà definitiva.</string>
    <string name="long_press_a_prbm_to_open_menu">Tieni premuto su un Prbm per modificare/eliminare</string>
    <string name="modify_values">Modifica valori</string>
    <string name="insert_unit_up">Inserisci riga sopra</string>
    <string name="insert_unit_down">Inserisci riga sotto</string>
    <string name="delete_row">Elimina riga</string>
    <string name="save_prbm_successful">Salvataggio del PRBM riuscito</string>
    <string name="save_and_exit">Salva ed esci</string>
    <string name="exit_without_save">Esci senza salvare</string>
    <string name="authors_colon">"Autori: "</string>
    <string name="place_colon">"Luogo: "</string>
    <string name="date_colon">"Data: "</string>
    <string name="long_press_to_choose">Premi a lungo per selezionare un elemento da aggiungere</string>
    <string name="move_up">Sposta in alto</string>
    <string name="move_down">Sposta in basso</string>
    <string name="entity_menu">Menù osservazione</string>
    <string name="confirm_delete">Conferma cancellazione</string>
    <string name="are_you_sure_delete_entity">Sei sicuro di voler cancellare questa osservazione?</string>
    <string name="modify_entity_values">Modifica valori riga</string>
    <string name="save_on_disk">Sincronizzazione dei PRBM</string>
    <string name="saving_all_prbms">Salvataggio di tutti i PRBM online</string>
    <string name="gps">GPS</string>
    <string name="get_gps_coord">Ottieni coordinate GPS</string>
    <string name="coordiante_assenti">Coordiante: Assenti</string>
    <string name="photo">Foto</string>
    <string name="photo_error">Errore nel salvataggio della foto</string>
    <string name="pick_prbm_date">Scegli la data del PRBM</string>
    <string name="pick_prbm_time">Scegli l\'ora del PRBM</string>
    <string name="pick_unit_time">Scegli l\'ora dell\'osservazione</string>
    <string name="contact_email">info@bitprepared.it</string>
    <string name="loading_in_progress">Caricamento in corso: %1$d %%</string>
    <string name="loading_error">Errore nel caricamento: %1$s</string>
    <string name="are_you_sure_to_delete">Sei sicuro di voler eliminare questo PRBM?</string>
    <string name="update_gps_coordinates">Aggiornare coordinate GPS?</string>
    <string name="do_you_want_to_override_gps">I dati GPS sono già stati acquisiti per questa osservazione, vuoi sovrascrivere?</string>
    <string name="coordinates_acquiring">Coordinate: Acquisizione…</string>
    <string name="coordinates_missing">Coordinate: Assenti</string>
    <string name="coordinates">"Coordinate: %1$d %2$d"</string>
    <string name="number_of_meters">Numero di Metri percorsi</string>
    <string name="meters_label">Metri</string>
    <string name="azimuth_label">Azimuth</string>
    <string name="minutes_label">Minuti</string>
    <string name="minutes_explanation">Minuti passati</string>
    <string name="azimuth_explanation">Angolo dell\'azimuth (gradi)</string>
    <string name="delete_the_row">Cancellare la riga?</string>
    <string name="are_you_sure_to_delete_a_row">Sei sicuro di voler cancellare la riga? Tutte le osservazioni in questa riga verranno perse</string>
    <string name="unit_attachment">Immagine allegata all\'osservazione</string>
    <string name="unit_description">Descrizione</string>
    <string name="unit_description_hint">Inserisci una descrizione per questa osservazione</string>
    <string name="unit_title">Titolo</string>
    <string name="unit_title_hint">Inserisci il titolo di questa osservazione</string>
    <string name="press_to_pick_image_from_gallery">Premi per aggiungere un\'immagine dalla galleria</string>
    <string name="press_to_add_pic_from_camera">Premi per aggiungere un\'immagine dalla fotocamera</string>
    <string name="gps_permission_denied">Impossibile ottenere la posizione se non hai dato i permessi all\'app</string>
    <string name="no_gps_coordinates">Impossibile ottenere le coordinate per questa riga perché il GPS non é attivo.</string>
    <string name="coordinates_overview">Latitudine %1$s\nLongitudine %2$s\nAngolo %3$s\nVelocità %4$s\nOrario GPS %5$s</string>
    <string name="update_coordinates">Aggiorna le coordinate</string>
    <string name="remove_coordinates">Rimuovi le coordinate</string>
    <string name="gps_pairing">Acquisizione GPS in corso…</string>
    <string name="gps_paired">Acquisizione GPS riuscita</string>
    <string name="gps_disabled">Localizzazione GPS disattivata</string>
    <string name="version">Versione: %1$s</string>
    <string name="enable_gps">Attiva GPS</string>
    <string name="far_left">Lontano sinistra</string>
    <string name="near_left">Vicino sinistra</string>
    <string name="near_right">Vicino destra</string>
    <string name="far_right">Lontano destra</string>
    <string name="add_row">Nuova riga sopra</string>

</resources>
