<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/grid_doub"
        tools:context=".activity.CreatePrbmActivity">

        <TextView
            android:id="@+id/text_create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_prbm"
            android:textSize="@dimen/text_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:helperText="@string/title_hint"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authors"
            app:helperText="@string/authors_hint"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            app:helperText="@string/place_hint"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="date"
            app:helperText="@string/date_hint"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            app:helperText="@string/time_hint"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            app:helperText="@string/note_hint"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="text_create_title,textinput_title,textinput_authors,textinput_place,textinput_date,textinput_time,textinput_notes"
            app:flow_verticalBias="0"
            app:flow_verticalGap="@dimen/grid_doub"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>